# computational_algebra

./: .gitignore  CMakeLists.txt  Matrix.h  Polynomial.h  README.md  main.cpp  matrix.h  polynomial.h
Reports/: data.py  overall_report.ipynb  task1_report.ipynb  task2_report.ipynb  task3_report.ipynb  task4_report.ipynb  task5_report.ipynb  task6_report.ipynb  task7_report.ipynb  task8_report.ipynb
Tasks/: Task1.h  Task2.h  Task3.h  Task4.h  Task5.h  Task6.h  Task7.h  Task8.h
Tests/: Tests.cpp  Tests.h
Utils/: DataOutput.cpp  DataOutput.h  ThreadPool.cpp  ThreadPool.h  Utils.cpp  Utils.h  thread_pool.cpp  thread_pool.h
input_files/: task1_input1  task1_input2  task2_input1  task2_input2  task4_input1  task4_input2  task6_input1  task6_input2
reports/: overall_report.ipynb  task1_report.ipynb  task3_report.ipynb  task7_report.ipynb
tasks/: task1.h  task2.h  task3.h  task4.h  task5.h  task6.h  task7.h  task8.h
tests/: tests.cpp  tests.h
utils/: data_output.cpp  data_output.h  thread_pool.cpp  thread_pool.h  utils.cpp  utils.h
